fix(index): use relative app links so apps open when served from different roots

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
 
     <main>
       <div class="grid">
-        <a class="card" href="/apps/dialogue-player/">
+        <a class="card" href="apps/dialogue-player/">
           <h3>Dialogue Player</h3>
           <p>Play interactive dialogue scenarios and view decision reports.</p>
         </a>
 
-        <a class="card" href="/apps/dialogue-editor/">
+        <a class="card" href="apps/dialogue-editor/">
           <h3>Dialogue Editor</h3>
           <p>Create and export dialogue JSON used by the player.</p>
         </a>
 
-        <a class="card" href="/apps/seat-sample-designer/">
+        <a class="card" href="apps/seat-sample-designer/">
           <h3>Seat / Sample Designer</h3>
           <p>Design seating/sample maps, place players, and export data.</p>
         </a>
 
-        <a class="card" href="/apps/template/">
+        <a class="card" href="apps/template/">
           <h3>Template</h3>
           <p>Master template files — copy to create new apps.</p>
         </a>
